--- a/EvernoteClone/packages.config
+++ b/EvernoteClone/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CognitiveServices.Speech" version="1.28.0" targetFramework="net48" />
   <package id="sqlite-net-pcl" version="1.8.116" targetFramework="net48" />
   <package id="SQLitePCLRaw.bundle_green" version="2.0.4" targetFramework="net48" />
   <package id="SQLitePCLRaw.core" version="2.0.4" targetFramework="net48" />
