Creating login and register

--- a/EvernoteClone/EvernoteClone.csproj
+++ b/EvernoteClone/EvernoteClone.csproj
@@ -98,6 +98,7 @@
     <Compile Include="ViewModel\Commands\NewNotebookCommand.cs" />
     <Compile Include="ViewModel\Commands\NewNoteCommand.cs" />
     <Compile Include="ViewModel\Commands\RegisterCommand.cs" />
+    <Compile Include="ViewModel\Commands\ShowRegisterCommand.cs" />
     <Compile Include="ViewModel\Helpers\DatabaseHelper.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
