--- a/EvernoteClone/packages.config
+++ b/EvernoteClone/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.CognitiveServices.Speech" version="1.28.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="sqlite-net-pcl" version="1.8.116" targetFramework="net48" />
   <package id="SQLitePCLRaw.bundle_green" version="2.0.4" targetFramework="net48" />
   <package id="SQLitePCLRaw.core" version="2.0.4" targetFramework="net48" />
